Really fix the MiniPil layout shiftingl I hope. Also make them better anyway.

--- a/src/components/Job.css
+++ b/src/components/Job.css
@@ -24,4 +24,7 @@
 .job-tech {
   margin-left: -0.3em;
   padding: 0.5em 0;
+  display: flex;
+  flex-flow: row wrap;
 }
+
